				Adium Version History
				-----------------------
Version 1.4 (X/X/XXX)
* Requires Mac OS X 10.5 or later
* Updated to Sparkle 1.5
* Added Twitter
* Added IRC
* Greatly improved group chats and group chat bookmarks

Twitter 
 * details go here

Group Chats and Group Chat Bookmarks
 * When you are mentioned in a group chat, the color of the tab's message count changes to red.
 * Bookmarks no longer trigger events when their account comes online.
 * Message windows' tabs and titles now display the alias of the bookmark which represents the chat. (#11756)
 * Bookmarks are only shown in the list when their accounts are online.
 * Set a shortcut of ⌘⌥/ for the "Toggle User List" menu item.
 * Added a "Swap User List Side" menu item, defaulting to the user list being on the right.	(#8689)
 * Double-clicking a contact in the group chat user list opens a chat with them.
 * When double-clicking the resize widget in the user list, don't show a few pixels of it on the left of the chat.
 * Respect the "show recent messages" preference for group chats.
 * Prevent a duplicate separator item in group chat context menus. (#11674)
 * Add context menus for group chats, including "Add Bookmark", "Get Info on Bookmark", "Toggle User List", and "View Chat Transcripts".
 * Support opening chat transcripts for the group chats like a normal chat.
 * Set appropriate icons and coloring for bookmarks based on their associated chat information, such as the unviewed content background or flashing.
 * Group chat events such as "You are mentioned", "Message received" and join/leave events will use the events set on their bookmark.
 * Add a menu item for group chat user lists to add as a contact.
 * The group chat user list is now sorted by, and displays, operator status in the channels.
 * The user list remembers its open or closed status per room.
 * Fixed bookmarks appearing in groups when groups are disabled, or disappearing.
 * Bookmarks can now be removed.