@@ -9,6 +9,9 @@ Version 1.4 (X/X/XXX)
 
 Twitter 
  * details go here
+ 
+IRC
+ * details go here
 
 Group Chats and Group Chat Bookmarks
  * When you are mentioned in a group chat, the color of the tab's message count changes to red.
@@ -125,6 +128,7 @@ Miscellaneous
  * You can now define which applications should be the default for different services in the Advanced preferences. (#158)
  * The about box credits are now scrollable. (#9967)
  * The unread count is now cleared when clearing the display. (#10605)
+ * Error and information display windows no longer exceed their maximum height, and take focus when opening. (#11793).
  * Possibly fixed support for a PAC proxy server. (#224, #11364)
  * Disabled the "Show # recent messages in new chats" option when "Log messages" is off. (#11359)
  * Menu items such as “Show Offline Contacts” now always use the “Show” verb, with a checkbox indicating that they're currently shown. Previous versions indicated that by changing the verb to “Hide”. #4740.
